--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Weather app</title>
   </head>
   <body>
-    <!- the div with the id of root renders the react application -->
+    <!-- the div with the id of root renders the react application -->
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
